--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "web-scraper-mcp",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "MCP server for scraping images and text from websites with comprehensive web content extraction capabilities",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "bin": "dist/index.js",
+  "bin": {
+    "web-scraper-mcp": "dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "cli": "node dist/cli.js",
     "dev": "ts-node src/index.ts",
+    "dev:cli": "ts-node src/cli.ts",
     "test": "node simple-test.js",
     "lint": "eslint src/**/*.ts",
     "prepare": "npm run build"
@@ -24,23 +28,28 @@
     "cheerio",
     "axios",
     "sharp",
-    "typescript"
+    "typescript",
+    "npx",
+    "cli",
+    "scraping",
+    "content-extraction"
   ],
   "author": "Web Scraper Team",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "cheerio": "^1.0.0",
     "axios": "^1.6.0",
-    "sharp": "^0.33.0",
-    "fs-extra": "^11.1.0"
+    "cheerio": "^1.0.0",
+    "commander": "^14.0.0",
+    "fs-extra": "^11.1.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/fs-extra": "^11.0.0",
     "@types/cheerio": "^0.22.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.0.0"
+    "@types/fs-extra": "^11.0.0",
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist",
@@ -66,5 +75,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "preferGlobal": true
 }
